# f5-declarative-examples

./: .gitignore  .pre-commit-config.yaml  .talismanrc  .yamllint.yaml  Gemfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pre-commit.yml
